--- a/.github/workflows/job-analyze-commits.yml
+++ b/.github/workflows/job-analyze-commits.yml
@@ -51,8 +51,7 @@ jobs:
           else
             echo "::set-output name=should_prepare_web_release::false"
             echo "::set-output name=should_prepare_server_release::false"
-            comment_body="### **Skipping $COMPONENT release**\n\n$COMPONENT release will be skipped this time"
-            gh pr comment "$PULL_REQUEST_NUMBER" --body "$comment_body"
+            gh pr comment "$PULL_REQUEST_NUMBER" --body $"### **Skipping $COMPONENT release**\n\n$COMPONENT release will be skipped this time"
           fi
         env:
           GH_TOKEN: ${{ secrets.GH_TOKEN }}
