--- a/.github/workflows/job-analyze-commits.yml
+++ b/.github/workflows/job-analyze-commits.yml
@@ -46,12 +46,11 @@ jobs:
             elif [ "$COMPONENT" == "server" ]; then
               echo "::set-output name=should_prepare_server_release::true"
             fi
-            comment_body="### 🚀 **Preparing for $COMPONENT release**\nThese changes will be incorporated into the forthcoming release:\n\n$changes"
-            gh pr comment "$PULL_REQUEST_NUMBER" --body "$comment_body"
+            gh pr comment "$PULL_REQUEST_NUMBER" --body $'### 🚀 **Preparing for release**\nThese changes will be incorporated into the forthcoming release:\n\n'"$changes"$''
           else
             echo "::set-output name=should_prepare_web_release::false"
             echo "::set-output name=should_prepare_server_release::false"
-            gh pr comment "$PULL_REQUEST_NUMBER" --body $"### **Skipping $COMPONENT release**\n\n$COMPONENT release will be skipped this time"
+            gh pr comment "$PULL_REQUEST_NUMBER" --body $'Skipping '"$COMPONENT"$' release'
           fi
         env:
           GH_TOKEN: ${{ secrets.GH_TOKEN }}
