--- a/.github/workflows/push-production-web.yml
+++ b/.github/workflows/push-production-web.yml
@@ -1,19 +1,15 @@
-name: Web Pipeline
+name: Production Web
 
 on:
   push:
     branches:
       - main
-    paths:
-      - 'web/**'
 
 jobs:
   cleanup:
     name: Clean up Deployment History
-    environment: production
     runs-on: ubuntu-latest
     permissions: write-all
-
     steps:
       - name: 🗑 Delete deployment
         uses: strumwolf/delete-deployment-environment@v2
@@ -27,27 +23,37 @@ jobs:
     needs: cleanup
     runs-on: ubuntu-latest
     timeout-minutes: 15
-    environment: production
     env:
       ENVIRONMENT: production
     steps:
       - uses: actions/checkout@v3
+
+      - uses: dorny/paths-filter@v2
+        id: changes
+        with:
+          filters: |
+            package:
+              - 'web/**'
+
       - uses: actions/setup-node@v3
         with:
           cache: npm
           node-version: 18
+        if: steps.changes.outputs.package == 'true'
+
       - name: Configure AWS Credentials
         uses: aws-actions/configure-aws-credentials@v1
         with:
           aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
           aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
           aws-region: us-east-1
+        if: steps.changes.outputs.package == 'true'
+
       - name: Set execute permissions for deploy script
         run: chmod +x scripts/deploy_to_s3.sh
       - name: Deploy to S3
         shell: bash
         run: |
           cd scripts && ./deploy_to_s3.sh --bucket-name ${{ secrets.WEBSITE_BUCKET_NAME }} --environment ${{ env.ENVIRONMENT }}
-
-
+        if: steps.changes.outputs.package == 'true'
 
