--- a/.github/workflows/job-analyze-commits.yml
+++ b/.github/workflows/job-analyze-commits.yml
@@ -48,12 +48,15 @@ jobs:
           done
           if [ -n "$changes" ]; then
             if [ "${{ matrix.component.type }}" == "web" ]; then
+              echo "There were changes in web..."
               echo "::set-output name=should_prepare_web_release::true"
             elif [ "${{ matrix.component.type }}" == "server" ]; then
+              echo "There were changes in server..."
               echo "::set-output name=should_prepare_server_release::true"
             fi
             gh pr comment "$PULL_REQUEST_NUMBER" --body $'### 🚀 **Preparing for '"$COMPONENT"' release**\nThese changes will be incorporated into the forthcoming release:\n\n'"$changes"$''
           else
+            echo "No Changes..."
             echo "::set-output name=should_prepare_web_release::false"
             echo "::set-output name=should_prepare_server_release::false"
           fi
