--- a/.github/workflows/job-analyze-commits.yml
+++ b/.github/workflows/job-analyze-commits.yml
@@ -44,7 +44,9 @@ jobs:
           fi
           for scope_item in "${scopes[@]}"; do
             scope_changes=$(git log --pretty=format:"%s" origin/main..origin/develop | grep -E "feat\($scope_item\)|fix\($scope_item\)|chore\($scope_item\)" || echo "")
-            changes+=''"$scope_changes"$'\n'
+            if [ -n "$scope_changes" ]; then
+              changes+="$scope_changes\n"
+            fi
           done
           if [ -n "$changes" ]; then
             if [ "${{ matrix.component.type }}" == "web" ]; then
