--- a/lambdas/.releaserc
+++ b/lambdas/.releaserc
@@ -1,4 +1,5 @@
 {
+  "extends": "../.releaserc",
   "plugins": [
     [
       "@semantic-release/commit-analyzer",
@@ -21,20 +22,6 @@
           { "type": "chore", "scope": "position", "release": "patch" }
         ]
       }
-    ],
-    "@semantic-release/release-notes-generator",
-    "@semantic-release/changelog",
-    [
-        "@semantic-release/npm",
-        {
-          "npmPublish": false
-        }
-    ],
-    "@semantic-release/git",
-    "@semantic-release/github"
-  ],
-  "branches": [
-    "master",
-    "main"
+    ]
   ]
 }
