--- a/web/.releaserc
+++ b/web/.releaserc
@@ -1,29 +1,15 @@
 {
+  "extends": "../.releaserc",
   "plugins": [
     [
       "@semantic-release/commit-analyzer",
       {
         "releaseRules": [
-          { "type": "feat", "scope": "ui", "release": "minor" },
-          { "type": "fix", "scope": "ui", "release": "patch" },
-          { "type": "chore", "scope": "ui", "release": "patch" },
-          {"type": "chore",  "release": "patch"}
+          { "type": "feat", "scope": "web", "release": "minor" },
+          { "type": "fix", "scope": "web", "release": "patch" },
+          { "type": "chore", "scope": "web", "release": "patch" }
         ]
       }
-    ],
-    "@semantic-release/release-notes-generator",
-    "@semantic-release/changelog",
-    [
-        "@semantic-release/npm",
-        {
-          "npmPublish": false
-        }
-    ],
-    "@semantic-release/git",
-    "@semantic-release/github"
-  ],
-  "branches": [
-    "master",
-    "main"
+    ]
   ]
 }
