--- a/.github/workflows/job-create-release.yml
+++ b/.github/workflows/job-create-release.yml
@@ -21,6 +21,10 @@ jobs:
         cache: npm
         node-version: 18
 
+    - name: Install dependencies
+      run: |
+        npm install
+
     - name: Release
       run: |
         npm run release:server
