--- a/lambdas/.releaserc
+++ b/lambdas/.releaserc
@@ -1,5 +1,4 @@
 {
-  "extends": "../.releaserc",
   "plugins": [
     [
       "@semantic-release/commit-analyzer",
@@ -22,6 +21,20 @@
           { "type": "chore", "scope": "position", "release": "patch" }
         ]
       }
-    ]
+    ],
+    "@semantic-release/release-notes-generator",
+    "@semantic-release/changelog",
+    [
+        "@semantic-release/npm",
+        {
+          "npmPublish": false
+        }
+    ],
+    "@semantic-release/git",
+    "@semantic-release/github"
+  ],
+  "branches": [
+    "master",
+    "main"
   ]
 }
