--- a/package.json
+++ b/package.json
@@ -8,8 +8,8 @@
   "license": "ISC",
   "scripts": {
     "prepare": "husky install",
-    "release:web": "semantic-release --extends ./web/.releaserc",
-    "release:server": "semantic-release --extends ./lambdas/.releaserc"
+    "release:web": "semantic-release --extends ./web/.releaserc.json",
+    "release:server": "semantic-release --extends ./lambdas/.releaserc.json"
   },
   "lint-staged": {
     "web/**/*.{js,jsx,ts,tsx}": "cd web && npm run lint && npm run format",
