fix(ci): minor fix

--- a/.github/workflows/pull-request-production.yml
+++ b/.github/workflows/pull-request-production.yml
@@ -11,6 +11,7 @@ on:
 
 jobs:
   cleanup-artifacts:
+    name: Clean artifacts
     runs-on: ubuntu-latest
     steps:
       - name: Remove previous artifacts
