--- a/.github/workflows/pull-request.yml
+++ b/.github/workflows/pull-request.yml
@@ -5,5 +5,18 @@ on:
 
 jobs:
   validate:
-    name: Validate
-    uses: ./.github/workflows/job-validate-pr-title.yml
+    name: Validate PR Title
+    runs-on: ubuntu-latest
+    steps:
+      - name: Compare PR title with Regex
+        run: |
+          PR_TITLE="${{ github.event.pull_request.title }}"
+          PATTERN="^(feat|fix|chore)(\(web\)|\(authentication\)|\(authorizer\)|\(checklist\)|\(company\)|\(position\)|\(ci\)|\(terraform\)): .+"
+          EXCEPTIONS=("Production Deployment" "Staging Deployment" "chore")
+
+          if [[ " ${EXCEPTIONS[@]} " =~ " $PR_TITLE " ]]; then
+              echo "PR title is an allowed exception."
+          elif ! [[ $PR_TITLE =~ $PATTERN ]]; then
+              echo "PR title does not match the required format 'type(scope): description' or 'type: description'"
+              exit 1
+          fi
